--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -41,6 +41,119 @@
       top: 5870px;
       right: 319px;
     }
+    .block__stars {
+      position: relative;
+      >:nth-child(1) {
+        top: 650px;
+        left: 600px;
+      }
+      >:nth-child(2) {
+        top: 700px;
+        left: 250px;
+        width: 70px;
+        height: 70px;
+      }
+      >:nth-child(3) {
+        top: 670px;
+        left: -17px;
+        width: 70px;
+        height: 70px;
+      }
+      >:nth-child(4) {
+        top: 750px;
+        right: 380px;
+        width: 100px;
+        height: 100px;
+      }
+      >:nth-child(5) {
+        top: 1036px;
+        right: 560px;
+        width: 100px;
+        height: 100px;
+      }
+      >:nth-child(6) {
+        top: 1226px;
+        right: -287px;
+        width: 70px;
+        height: 70px;
+      }
+      >:nth-child(7) {
+        top: 1356px;
+        right: -423px;
+        width: 70px;
+        height: 70px;
+      }
+      >:nth-child(8) {
+        top: 1410px;
+        right: -660px;
+      }
+      >:nth-child(9) {
+        top: 2167px;
+        right: 320px;
+        width: 100px;
+        height: 100px;
+      }
+      >:nth-child(10) {
+        top: 2640px;
+        right: 530px;
+        width: 70px;
+        height: 70px;
+      }
+      >:nth-child(11) {
+        top: 2629px;
+        left: 600px;
+        width: 100px;
+        height: 100px;
+      }
+      >:nth-child(12) {
+        top: 2800px;
+        right: -265px;
+        width: 70px;
+        height: 70px;
+      }
+      >:nth-child(13) {
+        top: 3031px;
+        right: -550px;
+        width: 70px;
+        height: 70px;
+        z-index: 6;
+      }
+      >:nth-child(14) {
+        top: 4272px;
+        right: 467px;
+        width: 120px;
+        height: 120px;
+      }
+      >:nth-child(15) {
+        top: 4300px;
+        right: -250px;
+        width: 100px;
+        height: 100px;
+        z-index: 6;
+      }
+      >:nth-child(16) {
+        top: 4870px;
+        right: -750px;
+        width: 120px;
+        height: 120px;
+      }
+      >:nth-child(17) {
+        top: 6000px;
+        right: -350px;
+      }
+      >:nth-child(18) {
+        top: 6178px;
+        right: -60px;
+        width: 70px;
+        height: 70px;
+      }
+      >:nth-child(19) {
+        top: 6260px;
+        right: 350px;
+        width: 70px;
+        height: 70px;
+      }
+    }
   }
 }
 .container {
