Added id for link, and refactor code

--- a/App/Components/Header/Navbar/Navbar.module.scss
+++ b/App/Components/Header/Navbar/Navbar.module.scss
@@ -1,8 +1,12 @@
 
 
-.ul__list {
+.navbar {
     display: flex;
-    color:  white;
-    list-style-type: none;
-    gap: 48px;
+    align-items: center;
+    .ul__list {
+        display: flex;
+        color:  white;
+        list-style-type: none;
+        gap: 48px;
+    }
 }
