--- a/App/utils/Button/Button.module.scss
+++ b/App/utils/Button/Button.module.scss
@@ -28,3 +28,25 @@
         cursor: auto;
     }
 }
+
+@media only screen and (max-width: 1200px) {
+    .btn {
+        font-size: 18px;
+        padding: 20px;
+        max-width: 270px;
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .btn {
+        font-size: 16px;
+        padding: 16px;
+        max-width: 245px;
+    }
+}
+@media only screen and (max-width: 828px) {
+    .btn {
+        font-size: 15px;
+        padding: 12px;
+        max-width: 215px;
+    }
+}
