--- a/App/utils/ProgrammList/ProgrammList.module.scss
+++ b/App/utils/ProgrammList/ProgrammList.module.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     gap: 25px;
     width: 100%;
+    flex-wrap: wrap;
     .ellipse {
         position: absolute;
         top: 17px;
