--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -20,7 +20,7 @@ $border-16px: 16px;
 $color-white: rgba(255, 255, 255, 1);
 $color-clean-5: rgba(255, 255, 255, 0.05);
 $color-clean-10: rgba(255, 255, 255, 0.1);
-$colot-text-40: rgba(162, 203, 251, 1);
+$color-text-40: rgba(162, 203, 251, 1);
 
 $color-linear-gradient-1: linear-gradient(rgba(31, 242, 255, 1) 0%,rgba(39, 249, 229, 1) 52.66%,rgba(47, 255, 205, 1) 100%);
 $color-linear-gradient-2: linear-gradient(152.14deg, rgba(21, 191, 253, 0.7) 9.96%, rgba(156, 55, 253, 0.7) 100%);
