--- a/App/Components/Footer/Footer.module.scss
+++ b/App/Components/Footer/Footer.module.scss
@@ -22,13 +22,14 @@
 
         &__container {
             display: flex;
-            padding: 33px 0 34px 0;
+            padding: 33px 20px 34px 20px;
             color: aliceblue;
             max-width: $width-container;
             margin: 0 auto;
             width: 100%;
             min-height: 195px;
             gap: 165px;
+            
             .logo__address {
                 display: flex;
                 flex-direction: column;
@@ -64,7 +65,6 @@
                 }
             }
             .media {
-
                 &__title {
                     font-family: "Roboto", sans-serif;
                     font-size: 18px;
@@ -76,6 +76,84 @@
                     display: flex;
                     gap: 25px;
                 }
+            }
+            .company__mobile {
+                display: none;
+                flex-direction: column;
+                gap: 15px;
+                max-height: 20px;
+                transition: all .3s linear;
+                &__title {
+                    cursor: pointer;
+                }
+                &__nav {
+                    overflow: hidden;
+                    &__list {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+                        list-style-type: none;
+                        transform: translateY(-130%);
+                        transition: all .3s linear;
+                        &__item {
+                            font-size: 13px;
+                        }
+                    }
+                    &__list.active {
+                        transform: translateY(0);
+                    }
+                }
+            }
+            .company__mobile.active {
+                max-height: 100%;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .footer {
+        &__wrapper {
+            &__container {
+                max-width: 1020px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .footer {
+        &__wrapper {
+            &__container {
+                max-width: 798px;
+                gap: 90px;
+                .company {
+                    max-width: 180px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 828px) {
+    .footer {
+        &__wrapper {
+            &__container {
+                flex-direction: column;
+                gap: 25px;
+                .company {
+                    display: none;
+                }
+                .company__mobile {
+                    display: flex;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 828px) {
+    .footer {
+        margin-top: 100px;
+        &__wrapper {
+            &__container {
+                gap: 15px;
             }
         }
     }
