--- a/App/Components/Header/Header.module.scss
+++ b/App/Components/Header/Header.module.scss
@@ -4,3 +4,14 @@
     justify-content: space-between;
     margin-bottom: 116px;
 }
+@media only screen and (max-width: 1050px) {
+    .header {
+        margin-bottom: 70px;
+    }
+}
+@media only screen and (max-width: 828px) {
+    .header {
+        margin-bottom: 20px;
+        align-items: center;
+    }
+}
