--- a/App/Components/SectionContactUs/SectionContactUs.module.scss
+++ b/App/Components/SectionContactUs/SectionContactUs.module.scss
@@ -3,21 +3,21 @@
 .contact__us {
     position: relative;
     border-radius: 20px;
-    background: $color-linear-gradient-3;
+    background: $color-bg;
     &::before {
         content: '';
         position: absolute;
-        z-index: 1;
-        top: 2px;
-        bottom: 1px;
-        left: 1px;
-        right: 1px;
+        z-index: -1;
+        top: -1px;
+        left: -1px;
+        width: calc(100% + 2px);
+        height: calc(100% + 2px);
         border-radius: 20px;
-        background: rgb(12, 16, 45);
+        background: $color-linear-gradient-3;
     }
     .contact__wrapper {
         position: relative;
-        padding: 56px 0;
+        padding: 56px 20px;
         border-radius: 20px;
         z-index: 2;
         width: 100%;
@@ -41,9 +41,6 @@
                 margin-top: 8px;
                 max-width: 100%;
             }
-            input {
-                background: $color-clean-10;
-            }
         }
         .ellipse {
             position: absolute;
@@ -53,6 +50,27 @@
             height: 356px;
             background: #2A3E84;
             filter: blur(175px);
+        }
+    }
+}
+@media only screen and (max-width: 828px) {
+    .contact__us {
+        .contact__wrapper {
+            padding: 56px;
+        }
+    }
+}
+@media only screen and (max-width: 576px) {
+    .contact__us {
+        .contact__wrapper {
+            padding: 30px 40px;
+        }
+    }
+}
+@media only screen and (max-width: 480px) {
+    .contact__us {
+        .contact__wrapper {
+            padding: 20px;
         }
     }
 }
