--- a/App/Components/SectionGallery/SectionGallery.module.scss
+++ b/App/Components/SectionGallery/SectionGallery.module.scss
@@ -36,3 +36,54 @@
         }
     }
 }
+@media only screen and (max-width: 1050px) {
+    .gallery {
+        margin-bottom: 180px;
+        &__box {
+            flex-direction: column-reverse;
+            gap: 0;
+            &__left {
+                flex-direction: row;
+                align-items: center;
+                max-width: 100%;
+            }
+            &__right {
+                gap: 30px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 828px) {
+    .gallery {
+        margin-bottom: 140px;
+        &__box {
+            min-height: auto;
+        }
+    }
+}
+@media only screen and (max-width: 576px) {
+    .gallery {
+        margin-bottom: 100px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .gallery {
+        margin-bottom: 60px;
+        &__box {
+            margin-top: 30px;
+            gap: 10px;
+            &__left,
+            &__right {
+                gap: 10px;
+            }
+            &__right {
+                &__up {
+                gap: 10px;
+                &__last {
+                    gap: 10px;
+                }
+            }
+        }
+        }
+    }
+}
