--- a/App/Components/SectionQuestions/SectionQuestions.module.scss
+++ b/App/Components/SectionQuestions/SectionQuestions.module.scss
@@ -2,6 +2,7 @@
 
 .questions {
     position: relative;
+    margin-bottom: 180px;
     
     .ellipse {
         top: 50px;
@@ -19,10 +20,8 @@
         justify-content: space-between;
         margin-top: 56px;
         min-height: 544px;
-        margin-bottom: 180px;
         &__mark {
             position: relative;
-
             max-width: 496px;
 
             &__photo {
@@ -32,6 +31,85 @@
                     top: -933px;
                     left: -366px;
                     z-index: -1;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .questions {
+        &__box {
+            &__mark {
+                &__photo {
+                    img {
+                        top: -633px;
+                        left: -216px;
+                        max-width: 1300px;
+                        max-height: 1700px;
+                    }
+                }
+            }
+            &__faq {
+                max-width: 550px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .questions {
+        margin-bottom: 80px;
+        &__box {
+            &__mark {
+                &__photo {
+                    img {
+                        top: -533px;
+                        left: -256px;
+                        max-width: 1200px;
+                        max-height: 1550px;
+                    }
+                }
+            }
+            &__faq {
+                max-width: 420px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 828px) {
+    .questions {
+        margin-bottom: 100px;
+        &__box {
+            min-height: auto;
+            gap: 50px;
+            &__mark {
+                &__photo {
+                    img {
+                        top: -450px;
+                        left: -206px;
+                        max-width: 800px;
+                        max-height: 1250px;
+                    }
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 480px) {
+    .questions {
+        margin-bottom: 60px;
+        &__box {
+            margin-top: 30px;
+            gap: 150px;
+            flex-direction: column;
+            &__mark {
+                &__photo {
+                    img {
+                        top: -330px;
+                        left: 50px;
+                        max-width: 500px;
+                        max-height: 787px;
+                    }
                 }
             }
         }
