--- a/App/Components/SectionReview/SectionReview.module.scss
+++ b/App/Components/SectionReview/SectionReview.module.scss
@@ -8,6 +8,7 @@
     &__box {
         display: flex;
         justify-content: space-between;
+        gap: 20px;
         .review__info {
             
             > h4 {
@@ -44,6 +45,9 @@
                     img {
                         border-radius: 16px; 
                         clip-path: polygon(100% 0, 100% 87%, 84% 100%, 0 100%, 0 0);
+                        object-fit: cover;
+                        max-width: 100%;
+                        max-height: 100%;
                     }
                 }
                 .secondary__slider {
@@ -57,6 +61,100 @@
                     img {
                         border-radius: 16px; 
                         clip-path: polygon(100% 0, 100% 93%, 84% 100%, 0 100%, 0 0);
+                        object-fit: cover;
+                        max-width: 100%;
+                        max-height: 100%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .review {
+        &__box {
+            .slider {
+                
+                &__down__box {
+                    gap: 20px;
+                    max-height: 370px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .review {
+        &__box {
+            flex-direction: column;
+            .review__info {
+            
+                > h4 {
+                    margin-top: 0;
+                }
+            }
+            .slider {
+                
+                &__down__box {
+                    gap: 40px;
+                    max-height: 330px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 828px) {
+    .review {
+        margin-bottom: 140px;
+        &__box {
+            .slider {
+                &__down__box {
+                    gap: 20px;
+                    max-height: 300px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 576px) {
+    .review {
+        margin-bottom: 100px;
+        &__box {
+            .slider {
+                &__down__box {
+                    max-height: 100%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    .main__slider {
+                        max-width: 240px;
+                        max-height: 300px;
+                    }
+                    .secondary__slider {
+                        max-width: 150px;
+                        max-height: 300px;
+                    }
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 480px) {
+    .review {
+        margin-bottom: 60px;
+        > h2 {
+            margin-bottom: 30px;
+        }
+        &__box {
+            .slider {
+                &__down__box {
+                    .main__slider {
+                        max-width: 180px;
+                        max-height: 225px;
+                    }
+                    .secondary__slider {
+                        max-width: 115px;
+                        max-height: 225px;
                     }
                 }
             }
