--- a/App/utils/Arrows/Arrows.module.scss
+++ b/App/utils/Arrows/Arrows.module.scss
@@ -3,28 +3,55 @@
 .arrows {
     display: flex;
     gap: 33px;
-    .wrapper {
+    .arrow__block {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
-        background: $color-linear-gradient-2;
-        width: 40px;
-        height: 40px;
+        background: $color-bg;
+        width: 38px;
+        height: 38px;
         border-radius: $border-8px;
-        box-sizing: border-box;
         cursor: pointer;
-        .arrow__block {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: calc(100% - 3px);
-            height: calc(100% - 3px);
+        &::before {
+            content: '';
+            position: absolute;
+            top: -1px;
+            left: -1px;
+            width: calc(100% + 2px);
+            height: calc(100% + 2px);
+            background: $color-linear-gradient-2;
+            z-index: -1;
             border-radius: $border-8px;
-            background: $color-bg;
-            img {
-                max-height: 19px;
-                max-width: 9.5px;
-            }
+        }
+        img {
+            max-height: 19px;
+            max-width: 9.5px;
+        }
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .arrows {
+        .arrow__block {
+            width: 33px;
+            height: 33px;
+        }
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .arrows {
+        .arrow__block {
+            width: 28px;
+            height: 28px;
+        }
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .arrows {
+        gap: 17px;
+        .arrow__block {
+            width: 25px;
+            height: 25px;
         }
     }
 }
