--- a/App/utils/Input/Input.module.scss
+++ b/App/utils/Input/Input.module.scss
@@ -3,49 +3,104 @@
 .wrapper__gradient,
 .wrapper__disabled,
 .wrapper__error {
+    position: relative;
     max-width: 493px;
     width: 100%;
-    margin: 1px;
-    padding: 1px;
-    background: $color-linear-gradient-3;
+    background: $color-bg;
     border-radius: $border-8px;
-    .wrapper__bg {
+    .custom__input {
         width: 100%;
+        padding: 24px;
         border-radius: $border-8px;
-        background: $color-bg;
-        .custom__input {
-            width: 100%;
-        
-            position: relative;
+        border: none;
+        outline: none;
+        background-color: $color-clean-10;
+        color: $color-white;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22.4px;
+        font-family: $font-Secondary;
+        &.error {
+            background: rgba(255, 165, 165, 0.2);
+        }
+        &:focus::placeholder {
             color: $color-white;
-            background: $color-clean-5;
-            padding: 24px;
-            border: none;
-            outline: none;
-            border-radius: $border-8px;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 22.4px;
-            font-family: $font-Secondary;
-            &.error {
-                background: rgba(255, 165, 165, 0.2);
-            }
-            &:focus::placeholder {
-                color: $color-white;
-            }
-            &::placeholder {
-                color: $colot-text-40;
-            }
-            &:disabled::placeholder {
-                color: $color-gray;
-            }
-        }       
+        }
+        &::placeholder {
+            color: $color-text-40;
+        }
+        &:disabled::placeholder {
+            color: $color-gray;
+        }
+    }
+    &::before {
+        content: '';
+        top: -1px;
+        left: -1px;
+        position: absolute;
+        z-index: -1;
+        background: $color-linear-gradient-3;
+        border-radius: $border-8px;
+        width: calc(100% + 2px);
+        height: calc(100% + 2px);
     }
 }
 
 .wrapper__disabled {
-    background: $color-gray;
+    &::before {
+        content: '';
+        top: -1px;
+        left: -1px;
+        position: absolute;
+        z-index: -1;
+        background: $color-gray;
+        border-radius: $border-8px;
+        width: calc(100% + 2px);
+        height: calc(100% + 2px);
+    }
 }
 .wrapper__error {
-    background: $color-error;
+    &::before {
+        content: '';
+        top: -1px;
+        left: -1px;
+        position: absolute;
+        z-index: -1;
+        background: $color-error;
+        border-radius: $border-8px;
+        width: calc(100% + 2px);
+        height: calc(100% + 2px);
+    }
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .wrapper__gradient,
+    .wrapper__disabled,
+    .wrapper__error {
+        .custom__input {
+            padding: 20px;
+            font-size: 14px;
+        }
+    }
+}
+@media only screen and (max-width: 828px) {
+    .wrapper__gradient,
+    .wrapper__disabled,
+    .wrapper__error {
+        .custom__input {
+            padding: 17px;
+            font-size: 13px;
+        }
+    }
+}
+@media only screen and (max-width: 480px) {
+    .wrapper__gradient,
+    .wrapper__disabled,
+    .wrapper__error {
+        .custom__input {
+            padding: 13px;
+            font-size: 13px;
+        }
+    }
 }
