--- a/App/utils/ProgrammList/programmItem/ProgrammItem.module.scss
+++ b/App/utils/ProgrammList/programmItem/ProgrammItem.module.scss
@@ -1,13 +1,12 @@
 @import "../../../../styles/variables.module.scss";
 
-
 .box {
     background: $color-linear-gradient-4;
     max-width: 181px;
     width: 100%;
     border-radius: 16px;
     padding: 1px;
-    min-height: 230px;
+    max-height: 230px;
     clip-path: polygon(100% 0, 100% 82%, 74% 100%, 0 100%, 0 0);
     .box__content {
         display: flex;
@@ -19,23 +18,36 @@
         text-align: center;
         background: $color-bg;
         border-radius: 16px;
-        min-height: calc(230px - 2px);
+        max-height: 100%;
         padding: 24px 9px 25px 10px;
         clip-path: polygon(100% 0, 100% 82%, 74% 100%, 0 100%, 0 0);
         &::before {
             content: '';
             position: absolute;
             background: $color-clean-5;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            left: -1px;
+            top: -1px;
+            width: calc(100% + 2px);
+            height: calc(100% + 2px);
             border-radius: 16px;
         }
         img {
             position: relative;
             object-fit: contain;
-            max-width: 162px;
-            max-height: 136px;
+            max-width: 100%;
+            max-height: 100%;
         }
+    }
+}
+@media only screen and (max-width: 576px) {
+    .box {
+        max-width: 140px;
+        max-height: 180px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .box {
+        max-width: 120px;
+        max-height: 145px;
     }
 }
