--- a/App/utils/StepCard/StepCard.module.scss
+++ b/App/utils/StepCard/StepCard.module.scss
@@ -1,8 +1,5 @@
 @import "../../../styles/variables.module.scss";
 
-
-
-
 .card {
     position: relative;
     max-width: 493px;
@@ -12,14 +9,21 @@
     &__wrapper {
         position: relative;
         z-index: 1;
-        padding: 1px 2px;
-        border-radius: $border-8px;
-        background: $color-linear-gradient-3;
+        &::before {
+            content: '';
+            position: absolute;
+            width: calc(100% + 2px);
+            height: calc(100% + 2px);
+            z-index: -1;
+            top: -1px;
+            left: -1px;
+            border-radius: $border-8px;
+            background: $color-linear-gradient-3;
+        }
         &__inner {
             background: $color-bg;
             border-radius: $border-8px;
             &__info {
-                
                 padding: 24px;
                 border-radius: $border-8px;
                 background: $color-clean-5;
@@ -27,7 +31,7 @@
                 flex-direction: column;
                 gap: 16px;
                 > p {
-                    color: $colot-text-40;
+                    color: $color-text-40;
                 }
             }
         }   
@@ -39,7 +43,7 @@
         top: -8px;
         left: -8px;
         width: 146px;
-        height: 228px;
+        height: calc(100% + 16px);
         border-radius: $border-16px;
         background: $color-linear-gradient-5;
         opacity: 0;
@@ -52,7 +56,7 @@
         top: -8px;
         right: -8px;
         width: 146px;
-        height: 228px;
+        height: calc(100% + 16px);
         border-radius: $border-16px;
         background: $color-linear-gradient-6;
         opacity: 1;
@@ -80,7 +84,7 @@
         top: -8px;
         left: -8px;
         width: 146px;
-        height: 228px;
+        height: calc(100% + 16px);
         border-radius: $border-16px;
         background: $color-linear-gradient-5;
         opacity: 1;
@@ -93,7 +97,7 @@
         top: -8px;
         right: -8px;
         width: 146px;
-        height: 228px;
+        height: calc(100% + 16px);
         border-radius: $border-16px;
         background: $color-linear-gradient-6;
         opacity: 0;
@@ -109,6 +113,27 @@
     }
 }
 
-
-
-
+@media only screen and (max-width: 576px) {
+    .card {
+        &__wrapper {
+            &__inner {
+                &__info {
+                    padding: 17px;
+                    min-height: 0;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 480px) {
+    .card {
+        &__wrapper {
+            &__inner {
+                &__info {
+                    padding: 13px;
+                    min-height: 0;
+                }
+            }
+        }
+    }
+}
