--- a/App/utils/Text/H1/H1.module.scss
+++ b/App/utils/Text/H1/H1.module.scss
@@ -7,3 +7,33 @@
     font-family: $font-Primary;
     color: $color-white;
 }
+@media only screen and (max-width: 1200px) {
+    .main__title {
+        font-size: 130px;
+        line-height: 160px;
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .main__title {
+        font-size: 95px;
+        line-height: 140px;
+    }
+}
+@media only screen and (max-width: 828px) {
+    .main__title {
+        font-size: 85px;
+        line-height: 120px;
+    }
+}
+@media only screen and (max-width: 576px) {
+    .main__title {
+        font-size: 80px;
+        line-height: 100px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .main__title {
+        font-size: 52px;
+        line-height: 80px;
+    }
+}
