--- a/App/utils/Text/H2/H2.module.scss
+++ b/App/utils/Text/H2/H2.module.scss
@@ -10,3 +10,28 @@
     text-align: center;
     margin: 0 auto;
 }
+
+@media only screen and (max-width: 1200px) {
+    .h2__title {
+        font-size: 62px;
+        line-height: 70px;
+    }
+}
+@media only screen and (max-width: 1050px) {
+    .h2__title {
+        font-size: 59px;
+        line-height: 65px;
+    }
+}
+@media only screen and (max-width: 828px) {
+    .h2__title {
+        font-size: 56px;
+        line-height: 60px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .h2__title {
+        font-size: 35px;
+        line-height: 40px;
+    }
+}
