--- a/App/utils/Text/H3/H3.module.scss
+++ b/App/utils/Text/H3/H3.module.scss
@@ -7,3 +7,22 @@
     font-family: $font-Primary;
     color: $color-white;
 }
+
+@media only screen and (max-width: 1200px) {
+    .h3__title {
+        font-size: 26px;
+        line-height: 32px;
+    }
+}
+@media only screen and (max-width: 828px) {
+    .h3__title {
+        font-size: 23px;
+        line-height: 32px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .h3__title {
+        font-size: 21px;
+        line-height: 28px;
+    }
+}
