--- a/App/utils/Text/P1/P1.module.scss
+++ b/App/utils/Text/P1/P1.module.scss
@@ -7,3 +7,18 @@
     font-family: $font-Secondary;
     color: $color-white;
 }
+@media only screen and (max-width: 1200px) {
+    .text {
+        font-size: 14px;
+    }
+}
+@media only screen and (max-width: 828px) {
+    .text {
+        font-size: 13px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .text {
+        line-height: 18px;
+    }
+}
