--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -92,6 +92,7 @@
         right: 320px;
         width: 100px;
         height: 100px;
+        z-index: 6;
       }
       >:nth-child(10) {
         top: 2640px;
@@ -129,7 +130,6 @@
         right: -250px;
         width: 100px;
         height: 100px;
-        z-index: 6;
       }
       >:nth-child(16) {
         top: 4870px;
@@ -161,6 +161,28 @@
   z-index: 5;
   max-width: $width-container;
   width: 100%;
+  margin: 0 auto;
+  padding: 0 25px;
+}
+@media only screen and (max-width: 1200px) {
+  .container {
+    max-width: 1020px;
+  } 
+}
+@media only screen and (max-width: 1050px) {
+  .container {
+    max-width: 798px;
+  } 
+}
+@media only screen and (max-width: 828px) {
+  .container {
+    max-width: 100%;
+  } 
+}
+@media only screen and (max-width: 828px) {
+  .main {
+    padding: 10px 0 0 0;
+  }
 }
 
 .description {
