--- a/App/utils/Text/H4/H4.module.scss
+++ b/App/utils/Text/H4/H4.module.scss
@@ -1,11 +1,8 @@
 @import "../../../../styles/variables.module.scss";
+@import "../../../../styles/mixins";
 
 .h4__title {
-    font-size: 24px;
-    line-height: 29px;
-    font-weight: 500;
-    font-family: $font-Primary;
-    color: $color-white;
+    @include text(24px, 29px, 500, $font-Primary, $color-white);
 }
 @media only screen and (max-width: 1200px) {
     .h4__title {
