--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -16,6 +16,7 @@ $color-ellipse: rgba(42, 62, 132, 1);
 
 $border-8px: 8px;
 $border-16px: 16px;
+$border-20px: 20px;
 
 $color-white: rgba(255, 255, 255, 1);
 $color-clean-5: rgba(255, 255, 255, 0.05);
