--- a/App/Components/SectionContactUs/SectionContactUs.module.scss
+++ b/App/Components/SectionContactUs/SectionContactUs.module.scss
@@ -1,19 +1,12 @@
 @import "../../../styles/variables.module.scss";
+@import "../../../styles/mixins";
 
 .contact__us {
     position: relative;
-    border-radius: 20px;
+    border-radius: $border-20px;
     background: $color-bg;
     &::before {
-        content: '';
-        position: absolute;
-        z-index: -1;
-        top: -1px;
-        left: -1px;
-        width: calc(100% + 2px);
-        height: calc(100% + 2px);
-        border-radius: 20px;
-        background: $color-linear-gradient-3;
+        @include wrap__gradient($color-linear-gradient-3, $border-20px);
     }
     .contact__wrapper {
         position: relative;
