--- a/App/utils/Arrows/Arrows.module.scss
+++ b/App/utils/Arrows/Arrows.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/variables.module.scss";
+@import "../../../styles/mixins";
 
 .arrows {
     display: flex;
@@ -14,15 +15,7 @@
         border-radius: $border-8px;
         cursor: pointer;
         &::before {
-            content: '';
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            width: calc(100% + 2px);
-            height: calc(100% + 2px);
-            background: $color-linear-gradient-2;
-            z-index: -1;
-            border-radius: $border-8px;
+            @include wrap__gradient($color-linear-gradient-2, $border-8px);
         }
         img {
             max-height: 19px;
