--- a/App/utils/Input/Input.module.scss
+++ b/App/utils/Input/Input.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/variables.module.scss";
+@import "../../../styles/mixins";
 
 .wrapper__gradient,
 .wrapper__disabled,
@@ -9,17 +10,15 @@
     background: $color-bg;
     border-radius: $border-8px;
     .custom__input {
+        @include text(16px, 22.4px, 400, $font-Secondary, $color-white);
+
         width: 100%;
         padding: 24px;
         border-radius: $border-8px;
         border: none;
         outline: none;
         background-color: $color-clean-10;
-        color: $color-white;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 22.4px;
-        font-family: $font-Secondary;
+
         &.error {
             background: rgba(255, 165, 165, 0.2);
         }
@@ -34,42 +33,18 @@
         }
     }
     &::before {
-        content: '';
-        top: -1px;
-        left: -1px;
-        position: absolute;
-        z-index: -1;
-        background: $color-linear-gradient-3;
-        border-radius: $border-8px;
-        width: calc(100% + 2px);
-        height: calc(100% + 2px);
+        @include wrap__gradient($color-linear-gradient-3, $border-8px);
     }
 }
 
 .wrapper__disabled {
     &::before {
-        content: '';
-        top: -1px;
-        left: -1px;
-        position: absolute;
-        z-index: -1;
-        background: $color-gray;
-        border-radius: $border-8px;
-        width: calc(100% + 2px);
-        height: calc(100% + 2px);
+        @include wrap__gradient($color-gray, $border-8px);
     }
 }
 .wrapper__error {
     &::before {
-        content: '';
-        top: -1px;
-        left: -1px;
-        position: absolute;
-        z-index: -1;
-        background: $color-error;
-        border-radius: $border-8px;
-        width: calc(100% + 2px);
-        height: calc(100% + 2px);
+        @include wrap__gradient($color-error, $border-8px);
     }
 }
 
