--- a/App/utils/Text/H1/H1.module.scss
+++ b/App/utils/Text/H1/H1.module.scss
@@ -1,11 +1,8 @@
 @import "../../../../styles/variables.module.scss";
+@import "../../../../styles/mixins";
 
 .main__title {
-    font-size: 150px;
-    line-height: 180px;
-    font-weight: 600;
-    font-family: $font-Primary;
-    color: $color-white;
+    @include text(150px, 180px, 600, $font-Primary, $color-white);
 }
 @media only screen and (max-width: 1200px) {
     .main__title {
