--- a/App/utils/Text/P1/P1.module.scss
+++ b/App/utils/Text/P1/P1.module.scss
@@ -1,11 +1,8 @@
 @import '../../../../styles/variables.module.scss';
+@import "../../../../styles/mixins";
 
 .text {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 22px;
-    font-family: $font-Secondary;
-    color: $color-white;
+    @include text(16px, 22px, 400, $font-Secondary, $color-white);
 }
 @media only screen and (max-width: 1200px) {
     .text {
