--- a/App/utils/Text/P2/P2.module.scss
+++ b/App/utils/Text/P2/P2.module.scss
@@ -1,11 +1,8 @@
 @import '../../../../styles/variables.module.scss';
+@import "../../../../styles/mixins";
 
 .text {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 19px;
-    font-family: $font-Secondary;
-    color: $color-white;
+    @include text(14px, 19px, 400, $font-Secondary, $color-white);
 }
 
 @media only screen and (max-width: 1200px) {
